--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ ul {
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    height: 1400px;
 }
 
 /* Style the header */
@@ -56,6 +57,17 @@ h1 {
         }
 
     /* Style the footer ul li */
+
+
     footer a:hover {
             color: white;
+        }
+    
+        footer img {
+            width: 70%;
+            position: absolute;
+            bottom: 0;
+            height: 350px;
+            z-index: -1;
+            left: 15%;
         }
