--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,12 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     height: 1400px;
+    background-color: #E1DCD6;
 }
 
 /* Style the header */
 header {
-    background-color: #333;
+    background-color: #E1DCD6;
     color: white;
     text-align: center;
     padding: 1rem;
