--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,132 @@ h1 {
         .liked {
             color: #e44d26;
         }
+
+        * {
+            box-sizing: border-box;
+          }
+          
+/*----------------------------------------------------------------- Style navigation bar--------------------------------------------------------- */
+.topnav {
+    overflow: hidden;
+    background-color: #000000;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .active {
+    background-color: #000000;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 17px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000000;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: none;
+    text-align: left;
+  }
+  
+  .topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #1c1a1a;
+    color: white;
+  }
+  
+  .dropdown-content a:hover {
+    color: white;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+      display: none;
+    }
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
+    }
+  }
+
+          /* Responsive layout - når skærmen er mindre end 700px bred, vil kolonnerne blive stablet oven på hinanden i stedet for ved siden af ​​hinanden */
+          @media screen and (max-width: 700px) {
+              .row {   
+                flex-direction: column;
+              }
+            }
+            
+          /* Responsive layout - når skærmen er mindre end 400px bred, vil navigationslinkene blive stablet oven på hinanden i stedet for ved siden af ​​hinanden */
+            @media screen and (max-width: 400px) {
+              .navbar a {
+                float: none;
+                width: 100%;
+              }
+            }
+          
+          /*--------------------------------------------------------------------- Style body --------------------------------------------------------------*/
+          body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+          }
+          
