--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,13 @@ h1 {
 /*----------------------------------------------------------------- Style navigation bar--------------------------------------------------------- */
 .topnav {
     overflow: hidden;
-    background-color: #000000;
+    background-color: #E1DCD6;
   }
   
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -111,60 +111,15 @@ h1 {
   }
   
   .active {
-    background-color: #000000;
-    color: white;
+    background-color: #E1DCD6;
+    color: #000000;
   }
   
   .topnav .icon {
     display: none;
   }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 17px;    
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #000000;
-    min-width: 160px;
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: rgb(255, 255, 255);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    background-color: none;
-    text-align: left;
-  }
-  
-  .topnav a:hover, .dropdown:hover .dropbtn {
-    background-color: #1c1a1a;
-    color: white;
-  }
-  
-  .dropdown-content a:hover {
-    color: white;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+
+
   
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child), .dropdown .dropbtn {
