--- a/styles.css
+++ b/styles.css
@@ -1,173 +1,57 @@
-/* Reset some default browser styles */
-body,
-h1,
-h2,
-p,
-ul {
-    margin: 0;
-    padding: 0;
+:root {
+    --lyseBlå(#93BFD8)
+}
+
+
+
+/* Hele siden */
+* {
+    font-family: 'Exo', sans-serif;
+    color: #000;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    height: 1400px;
     background-color: #E1DCD6;
 }
 
-/* Style the header */
-header {
-    background-color: #E1DCD6;
-    color: white;
-    text-align: center;
-    padding: 1rem;
+p {
+    line-height: 1.5;
+    font-size: 18px;
 }
 
-header h1 {
-    margin-bottom: 0.5rem;
-}
 
-h1 {
-    margin-bottom:0.5rem;
-}
-
-/* Style the navigation */
-        nav ul {
-            display: flex;
-            justify-content: center; 
-            gap: 1rem;
-        }
-
-        nav ul li a {
-            color: white-type;
-            text-decoration: none;
-        }
-
-        ul li a:hover {
-            color: white;
-            text-decoration: underline;
-        }
-
-        /* Style the text-decor main content */
-        main {
-            padding: 2rem;
-        }
-
-        h2 {
-            margin-bottom: 1rem;
-        }
-
-    /* Style the footer ul li */
-
-
-    footer a:hover {
-            color: white;
-        }
-    
-        footer img {
-            width: 70%;
-            position: absolute;
-            bottom: 0;
-            height: 350px;
-            z-index: -1;
-            left: 15%;
-        }
-
-/* -------------------------------------------------------------------Shoppen ------------------------------------------------------------------- */
-        .product {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 10px;
-            text-align: center;
-        }
-
-        .like-btn {
-            cursor: pointer;
-            color: #ccc;
-        }
-
-        .liked {
-            color: #e44d26;
-        }
-
-        * {
-            box-sizing: border-box;
-          }
-          
-/*----------------------------------------------------------------- Style navigation bar--------------------------------------------------------- */
-.topnav {
-    overflow: hidden;
-    background-color: #E1DCD6;
-  }
-  
-  .topnav a {
-    float: left;
+#opretForm {
     display: block;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .active {
-    background-color: #E1DCD6;
-    color: #000000;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child), .dropdown .dropbtn {
-      display: none;
-    }
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .topnav.responsive .dropdown {float: none;}
-    .topnav.responsive .dropdown-content {position: relative;}
-    .topnav.responsive .dropdown .dropbtn {
-      display: block;
-      width: 100%;
-      text-align: left;
-    }
-  }
+    
+}
 
-          /* Responsive layout - når skærmen er mindre end 700px bred, vil kolonnerne blive stablet oven på hinanden i stedet for ved siden af ​​hinanden */
-          @media screen and (max-width: 700px) {
-              .row {   
-                flex-direction: column;
-              }
-            }
-            
-          /* Responsive layout - når skærmen er mindre end 400px bred, vil navigationslinkene blive stablet oven på hinanden i stedet for ved siden af ​​hinanden */
-            @media screen and (max-width: 400px) {
-              .navbar a {
-                float: none;
-                width: 100%;
-              }
-            }
-          
-          /*--------------------------------------------------------------------- Style body --------------------------------------------------------------*/
-          body {
-            font-family: Arial, Helvetica, sans-serif;
-            margin: 0;
-          }
-          
+.boxAround {
+    display: flex;
+    flex-direction: column;
+}
+
+#comment, input {
+    border-radius: 5px;
+    border: none;
+}
+
+
+.opretForm {
+    display: flex;
+    flex-direction: column; 
+    background: #93BFD8;
+    margin: 10%;
+    padding: 10%;
+    border-radius: 10px;
+    line-height: 2.5;
+}
+
+.opretKnap {
+    justify-self: center;
+    align-self: center;
+    width: 50%;
+    margin-top: 30px;
+    border-radius: 5px;
+    border: none;
+    background: #307139;
+}
