--- a/Benjaminsstyle.css
+++ b/Benjaminsstyle.css
@@ -14,8 +14,6 @@
 }
 
 
-
-
 /*---------------------------------------------------------Forside-------------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
 
@@ -75,7 +73,7 @@
 
 /*-----------------------------------Fiskesteder content------------*/
 .FISKESTEDER-text {
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'Exo', sans-serif;
     font-weight: 600;
     font-style: italic;
 }
@@ -83,8 +81,6 @@
 .FISKESTEDER-content {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-
-
 }
 
 .container {
@@ -100,20 +96,8 @@
 }
 
 
-
-
-
-
-
-
 /*------------------------forside-fiskesteder----------------*/
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap');
-
-
-
-
-
-
 
 
 .img-right {
@@ -134,36 +118,22 @@
 }
 
 .FISKESTEDER-content {
-    
     font-weight: 400;
     font-size: 12px;
-
-
 }
-
-
-
-.FÆLLESSKAB {
-    margin: 25px;
-    width: 125px; 
-    height: 125px;
-}
-
 
 .container-fisk {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-around;
     padding: 20px;
 }
-
 
 .image-box {
     position: relative;
     width: 100%;
     margin-bottom: 20px;
 }
-
 
 .image {
     max-width: 100%;
@@ -189,7 +159,10 @@
 
 .content {
     margin: 0 20px;
-    max-width: 200px;
+}
+
+.container-content {
+    width: 500px;
 }
 
 @media screen and (min-width: 400px) {
@@ -224,9 +197,15 @@
     }
 
     .content {
-        margin: 0 80px;
-        max-width: 350px;
+        margin-left: 30px;
+        max-width: 550px;
     }
 
 
+}
+
+@media (max-width: 768px) {
+    .container-content {
+        width: 170px;
+    }
 }
